<resources>
    <string name="app_name">Ma réu</string>
    <string name="filter_list">Liste filtres</string>
    <string name="filter_item_name">Trier par salle</string>
    <string name="filter_item_time">Trier par heure</string>
    <string name="filter_item_date">Filtrer par date</string>
    <string name="filter_item_room">Filtrer par salle</string>
    <string name="save_btn_add_reunion">Sauvegarder</string>
    <string name="cancel_btn_add_reunion">Annuler</string>
    <string name="set_time">Définir heure</string>
    <string name="set_topic">Sujet</string>
    <string name="set_email">Email</string>
    <string name="set_date">Définir date</string>
    <string name="subitem_room_a">Salle A</string>
    <string name="subitem_room_b">Salle B</string>
    <string name="subitem_room_c">Salle C</string>
    <string name="subitem_room_d">Salle D</string>
    <string name="subitem_room_e">Salle E</string>
    <string name="subitem_room_f">Salle F</string>
    <string name="subitem_room_g">Salle G</string>
    <string name="subitem_room_h">Salle H</string>
    <string name="subitem_room_i">Salle I</string>
    <string name="subitem_room_j">Salle J</string>
    <string name="filter_item_reset">RAZ filtre</string>
    <string name="delete">Supprimer</string>
    <string name="cancel">Annuler</string>
    <string name="error_empty">Le champ ne peut pas être vide</string>
    <string name="error_not_valid">Entrer une adresse mail valide</string>
    <string name="text_view_time">%1$sh%2$s</string>
    <string name="alert_dialog_question">Êtes-vous sûr de vouloir supprimer ? \n%1$s - %2$s - %3$s</string>
    <string name="description_items">%1$s - %2$s - %3$s</string>
    <string name="no_meeting">Il n\'y a aucune réunion</string>

    <string-array name="rooms">
        <item>- Choisir Salle -</item>
        <item>Salle 1</item>
        <item>Salle 2</item>
        <item>Salle 3</item>
        <item>Salle 4</item>
        <item>Salle 5</item>
        <item>Salle 6</item>
        <item>Salle 7</item>
        <item>Salle 8</item>
        <item>Salle 9</item>
        <item>Salle 10</item>
    </string-array>
</resources>
