<?xml version="1.0" encoding="utf-8"?>

<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_meeting_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.AddMeetingActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_add_meeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        app:title="@string/app_name"
        app:titleTextColor="@android:color/white" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_view_room_color"
            android:layout_width="@dimen/image_size_phone_portrait_add_reunion"
            android:layout_height="@dimen/image_size_phone_portrait_add_reunion"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:src="@drawable/logo_mareu" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_room"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/image_view_room_color"
            android:layout_alignBottom="@+id/image_view_room_color"
            android:layout_toEndOf="@+id/image_view_room_color"
            android:entries="@array/rooms" />
    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_date"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center_vertical"
        android:hint="@string/set_date"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_phone_portrait_add_reunion" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_time"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center_vertical"
        android:hint="@string/set_time"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_phone_portrait_add_reunion" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_topic_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:boxBackgroundColor="@android:color/transparent"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_topic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:hint="@string/set_topic"
            android:inputType="text"
            android:textSize="@dimen/text_size_phone_portrait_add_reunion" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:boxBackgroundColor="@android:color/transparent"
        app:errorEnabled="true">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                app:singleLine="true" />

        </HorizontalScrollView>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:hint="@string/set_email"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/text_size_phone_portrait_add_reunion" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.appcompat.widget.LinearLayoutCompat>